--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -28,4 +28,15 @@ body {
 	height: 200px;
 	background-size: cover;
 	background-position: center;
+	border: 1px solid black;
+	border-radius: 4px;
+}
+
+.my--profile {
+	width: 100%;
+	height: 200px;
+	background-size: cover;
+	background-position: center;
+	border: 1px solid black;
+	border-radius: 4px;
 }
